--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -318,13 +318,13 @@
             setup: function (ed) {
                 ed.on('keyup', function (e) {
                     activeBtn();
+                    generateAccCode();
                     console.log('Editor contents was modified. Contents: ' + ed.getContent());       
                 });
             }
         });
         function activeBtn(){
             var activeBtn = $('button.active').attr('id')
-            console.log('Editor contents was modified. Contents: ' + ed.getContent());
             if(activeBtn == 'imgBuilderBtn') {
                 generateImgTextCode();
             }
@@ -1878,8 +1878,8 @@
 	        </div>
              <!--Start accordion generator-->
              <div class="tab-pane fade" id="buildAcc" role="tabpanel">
-                <div class="row">
-                    <div class="col-lg-6">
+                <div class="row w-75 mx-auto">
+                    <div class="col">
                         <div class="alert alert-danger border border-3 border-danger rounded mx-auto d-block accAlert">
                             <h3 class="text-center"><i class="fa-solid fa-circle-exclamation"></i> Stop and Read! How and when to use accordions</h3>
                             <p>Accordions <strong>should</strong> be used:</p>
@@ -1934,7 +1934,7 @@
                 <div id="drawer1">
                 <h6>Drawer 1 Heading + Content<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Create the headings for your accordion drawers and content for your accordions." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h6>
                 <textarea onchange="generateAccCode()" id="acc1Btn" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Heading on the accordion button. Max 75 characters"></textarea>
-                <textarea onchange="generateAccCode()" id="acc1Content" class="tinyMCEacc border border-dark rounded w-100 p-2" rows="5" placeholder="Content that will display on clicking the relative accordion button."></textarea>
+                <textarea onkeyup="generateAccCode()" id="acc1Content" class="tinyMCEacc border border-dark rounded w-100 p-2" rows="5" placeholder="Content that will display on clicking the relative accordion button."></textarea>
             </div>
                 <hr>
                 <div id="drawer2">
