Update code format for video

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -367,7 +367,7 @@
         var w100 = ' w-100';
         var btnPlaceholder = '<a src="'   
         var divClose = '</div>\n';
-        var rowClose = '</div>\n</div>';
+        var rowClose = '</div>\n</div>\n';
         var uqh2 = "text-bg-uq p-2";
         var resizedHead = "";
         var alertOpen = '<div class="alert alert-';
