--- a/codecentredev.html
+++ b/codecentredev.html
@@ -181,7 +181,7 @@
         tinymce.init({
             selector: '#tinyMCEcaption',
             menubar: false,
-            height: "150",
+            height: "200",
             plugins: [
                 'link',
                 'anchor', 'code', 'insertdatetime', 'help'
@@ -254,7 +254,7 @@
         tinymce.init({
             selector: '#tinyMCEcitation',
             menubar: false,
-            height: "350",
+            height: "200",
             plugins: [
                 'advlist', 'autolink', 'lists', 'link', 'image', 'charmap', 'preview',
                 'anchor', 'searchreplace', 'visualblocks', 'code', 'fullscreen',
@@ -387,7 +387,7 @@
         var w100 = ' w-100';
         var btnPlaceholder = '<a src="'   
         var divClose = '</div>\n';
-        var rowClose = '</div>\n</div>';
+        var rowClose = '</div>\n</div>\n';
         var uqh2 = "text-bg-uq p-2";
         var resizedHead = "";
         var alertOpen = '<div class="alert alert-';
@@ -1783,10 +1783,6 @@
                                     <input class="form-check-input" name="alertFontSize" id="alertFontSize4" type="radio" value="fs-4">
                                     <label class="form-check-label" for="alertFontSize4"><span class="fs-4">Medium</span></label>
                                 </div>
-                            </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg mt-3">
                                 <div class="form-check form-check-inline" id="alertFontSize" onchange="generateAlertCode()">
                                     <input class="form-check-input" name="alertFontSize" id="alertFontSize3" type="radio" value="fs-3">
                                     <label class="form-check-label" for="alertFontSize3"><span class="fs-3">Large</span></label>
@@ -1798,8 +1794,9 @@
                                 </div>
                                 </div>
                             </div>
-                                <hr>
+                                
                                 <div id="citationDiv" class="fade d-none">
+                                    <hr>
                                 <h5 class="font-weight-bold mt-3">Write/Paste your citation<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type in the text for the citation." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea class="border border-dark rounded w-100 p-2" rows="3" id="tinyMCEcitation" onkeyup=generateAlertCode() placeholder="Paste/write your citation here. It should be in APA 7th style."></textarea>
                             </div>
