fullscreentoggle added for tables

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -349,7 +349,7 @@
         }
     </script>
     <!--Setup page variables-->
-    <script type="text/javascript">
+    <script type="text/javascript"> 
         //Variables required to construct code output
         var rowOpen = '<div class="row">\n';
         var colOpen = '<div class="col-lg">\n';
@@ -424,7 +424,7 @@
             fullScreenAlertToggle();
             fullScreenTooltipToggle();
             fullScreenAccToggle();
-            
+            fullScreenTableToggle();
     });
     $(function() {
         var accNameTxt = $("#accName");
