update codecentre dev - new look

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -470,14 +470,10 @@
                 <ul class="dropdown-menu">
                     <li><button id="imgRightBtn" class="dropdown-item" href="#imgRight" data-bs-toggle="tab">Image/Video right 50%</button></li>
                     <li><button id="imgLeftBtn" class="dropdown-item" href="#imgLeft" data-bs-toggle="tab">Image/Video left 50%</button></li>
-                    <li><button id="imgRight33Btn" class="dropdown-item" href="#imgRight33" data-bs-toggle="tab">Image/Video right 33%
-                            width</button></li>
-                    <li><button id="imgLeft33Btn" class="dropdown-item" href="#imgLeft33" data-bs-toggle="tab">Image/Video left 33%
-                            width</button></li>
-                    <li><button id="imgFloatRightBtn" class="dropdown-item" href="#imgFloatRight" data-bs-toggle="tab">Image/Video float
-                            right</button></li>
-                    <li><button id="twoImgBtn" class="dropdown-item" href="#twoImgs" data-bs-toggle="tab">Two Images/Videos side by
-                            side</button></li>
+                    <li><button id="imgRight33Btn" class="dropdown-item" href="#imgRight33" data-bs-toggle="tab">Image/Video right 33% width</button></li>
+                    <li><button id="imgLeft33Btn" class="dropdown-item" href="#imgLeft33" data-bs-toggle="tab">Image/Video left 33% width</button></li>
+                    <li><button id="imgFloatRightBtn" class="dropdown-item" href="#imgFloatRight" data-bs-toggle="tab">Image/Video float right</button></li>
+                    <li><button id="twoImgBtn" class="dropdown-item" href="#twoImgs" data-bs-toggle="tab">Two Images/Videos side by side</button></li>
                 </ul>
             </li>
             <li class="nav-item" role="presentation">
@@ -516,7 +512,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
             <div class="tab-pane fade" id="imgRight" role="tabpanel">
                 <h3 class="text-bg-uq p-2">Text left/Image right</h3>
@@ -645,37 +640,19 @@
                         <div class="col-lg">
                             <div class="col-lg-6 float-lg-end m-2">
                                 <div class="ratio ratio-16x9">
-                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                        <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                            placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder
-                            text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to
-                            show this image floats.</p>
-                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                                placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                                placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                                placeholder text to show this image floats.</p>
-                                <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This
-                                    is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                                    placeholder text to show this image floats. This is placeholder text to show this image floats. This is
-                                    placeholder text to show this image floats.</p>
-                                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats.
-                                        This is placeholder text to show this image floats. This is placeholder text to show this image floats.
-                                        This is placeholder text to show this image floats. This is placeholder text to show this image floats.
-                                        This is placeholder text to show this image floats.</p>
-                                        <p>This is placeholder text to show this image floats. This is placeholder text to show this image
-                                            floats. This is placeholder text to show this image floats. This is placeholder text to show this
-                                            image floats. This is placeholder text to show this image floats. This is placeholder text to show
-                                            this image floats. This is placeholder text to show this image floats.</p>
-                                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image
-                                                floats. This is placeholder text to show this image floats. This is placeholder text to show
-                                                this image floats. This is placeholder text to show this image floats. This is placeholder text
-                                                to show this image floats. This is placeholder text to show this image floats.</p>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
                                 </div>
+                            </div>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="tab-pane fade" id="twoImgs" role="tabpanel">
                 <h3 class="text-bg-uq p-2">Two images side by side</h3>
                 <div class="copythis">
@@ -753,7 +730,7 @@
                                 <span class="htmlToCopy copyicon"><span class="uq-icon icon-symposium-white"></span>&nbsp;</span>
                                 <span class="htmlToCopy copyicon"><span class="uq-icon icon-tbl-white"></span>&nbsp;</span>
                                 <span class="htmlToCopy copyicon"><span class="uq-icon icon-workshop-white"></span>&nbsp;</span>
-                             </div>
+                            </div>
                         </div>
                     </div>
                 </div>
